--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Tangerine&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   transition-property: background, transform, center ;
@@ -21,10 +23,13 @@ h2 {
 }
 
 p {
-  font-family: 'Tangerine', cursive;
   font-size: 28px;
   font-weight: 400;
   margin: 10px 0;
+}
+
+.style-p-box-son {
+  font-family: 'Tangerine', cursive;
 }
 
 .App {
@@ -77,3 +82,30 @@ p {
   opacity: .8;
   transition: ease-in .3s;
 }
+
+footer{
+  width: 100%;
+  height: 40PX;
+  padding: 45px 0px;
+  font-family: 'Nunito', sans-serif;
+  background-image: url("./assets/background-footer.svg");
+  background-size: cover;
+  bottom: 0;
+  position: absolute;
+}
+
+
+.box__copyright{
+  font-size: 9px;
+  max-width: 1200px;
+  margin: auto;
+  text-align: center;
+  padding: 0px 40px;
+}
+
+.box__copyright p{
+  margin-top: 20px;
+  color: #7a7a7a;
+  font-size: 10px;
+}
+
