--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 body {
   margin: 0;
   padding: 0;
+  max-width: 1200vh;
 }
 
 h2 {
@@ -33,7 +34,7 @@ p {
 }
 
 .App {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,7 +43,7 @@ p {
 }
 
 .box-son-h2-p-btn {
-  width: 600px;
+  max-width: 600px;
   height: 100%;
   background-color: #fff;
   box-shadow: 0px 10px 15px 0px #000000cf;
@@ -85,8 +86,8 @@ p {
 
 footer{
   width: 100%;
-  height: 40PX;
-  padding: 45px 0px;
+  height: 40px;
+  padding: 30px 0px;
   font-family: 'Nunito', sans-serif;
   background-image: url("./assets/background-footer.svg");
   background-size: cover;
@@ -109,3 +110,26 @@ footer{
   font-size: 10px;
 }
 
+
+/*! Responsive */
+
+@media screen and (max-width:768px) {
+  h2{
+    font-size: 14px;
+  }
+  .box-son-h2-p-btn {
+    max-width: 350px;
+    margin: 10px;
+  }
+
+  .btn {
+    width: 20px;
+    height: 20px;
+    font-size: 16px;
+  }
+
+  .box-son-p-btn {
+    margin-right: 20px;
+    margin-bottom: 15px;
+}
+}
